saki-grid-multisearch improvement: position clear icon better and use padding to prevent overlap with field

--- a/sencha-workspace/packages/saki-grid-multisearch-5/sass/src/grid/MultiSearch.scss
+++ b/sencha-workspace/packages/saki-grid-multisearch-5/sass/src/grid/MultiSearch.scss
@@ -96,6 +96,10 @@ input[role=combobox] + div.saki-gms-clear {
   right: $gms-clear-combo-right;
 }
 
+.saki-gms-hasvalue {
+  padding-right: 18px;
+}
+
 .saki-gms-hasvalue:hover .saki-gms-clear {
   visibility:visible;
   -webkit-transition:all $gms-clear-duration $gms-clear-transition;
